tried to fix z-index on SVG icons

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,6 +78,7 @@ nav.main{
 	@include transition(transform 0.3s);
 	@include transform-origin(top, center);
 	@include border-radius(5px);
+	-webkit-backface-visibility: hidden;
 	
 	.showNavigation{
 		position: absolute;
@@ -89,6 +90,7 @@ nav.main{
 		background: rgba(0,0,0,0.75);
 		padding: 10px;
 		@include border-radius(50%);
+		-webkit-backface-visibility: hidden;
 	}
 	
 	&.navShown{
